--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,13 @@
   text-align: center;
 }
 
+h1 {
+  font-family: 'Reggae One';
+  font-size: 72px;
+  color: #0ccac4;
+}
+
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
